--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.57.0",
-    "snyk": "^1.95.3"
   },
   "jest": {
     "preset": "jest-react-native"
@@ -21,7 +20,8 @@
     "babel-preset-react-native": "1.9.0",
     "jest": "16.0.2",
     "jest-react-native": "16.0.0",
-    "react-test-renderer": "15.3.2"
+    "react-test-renderer": "15.3.2",
+    "snyk": "^1.95.3"
   },
   "snyk": true
 }
